Devops/K8s manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-web
  template:
    metadata:
      labels:
        app: nginx-web
    spec:
      containers:
        - name: nginx
          image: adithya39/adithya-devops:nginx-v1
          ports:
            - containerPort: 80
