Devops/K8s manifest/services.yml
apiVersion: v1
kind: Service

metadata:
  name: nginx-service

spec:
  selector:
    app: nginx-web

  ports:
    - port: 80
      targetPort: 80

  type: NodePort
