Devops/K8s manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /adithya
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
